syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/lovehotel24/booking-service/pkg/grpc/userpb";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (google.protobuf.Empty) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {}
  rpc GetAllUsers (GetAllUserRequest) returns (GetAllUserResponse) {}
}

message UUID {
  string value = 1;
}

message User {
  UUID id = 1;
  string name = 2;
  string phone = 3;
  string role = 4;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  UUID id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  UUID id = 1;
}

message GetAllUserRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetAllUserResponse {
  repeated User users = 1;
}